--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
             "settings": {
                 "clients": [
                     {
-                        "id": "e9e1a1o1-ja31-1137-535o-3t7e7j5j35jj"
+                        "id": "c93ef1d4-feac-4h86-96e9-234a37dda968"
                     }
                 ]
             },
